# adaptive_scorer

./: .gitignore  README.md  e_learning.py  pyproject.toml  real_estate.py
examples/: e_learning.py  real_estate.py
src/adaptive_scorer/: __init__.py  core.py  interface.py
