[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive_scorer"
version = "1.0"
authors = [
    { name = "Eugen Hoppe", email = "rispe_keller0x@icloud.com" }
]
description = "Adaptive Scorer"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
urls = { "Homepage" = "https://github.com/eugen-hoppe/adaptive_scorer" }

[project.scripts]
stringkeys = "src.adaptive_scorer:main"

[project.optional-dependencies]

[tool.setuptools]
package-dir = { "" = "src" }
packages = {"find" = { "where" = ["src"], "include" = ["*"] }}
include-package-data = true
